--- a/stories/index.html
+++ b/stories/index.html
@@ -5039,10 +5039,22 @@
       <td><a name="ur0052"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0066</td>
+      <td><a href="/stories/ur/0066_نوزی-بیلے-اور-تین-بال_slides.html" target="_blank">نوزی بیلے اور تین بال</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ur0066"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0067</td>
       <td><a href="/stories/ur/0067_پکانا_slides.html" target="_blank">پکانا</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ur0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0072</td>
+      <td><a href="/stories/ur/0072_ہنی-گائیڈ-کا-بدلہ_slides.html" target="_blank">ہنی گائیڈ کا بدلہ</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ur0072"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0087</td>
@@ -5061,6 +5073,12 @@
       <td><a href="/stories/ur/0095_زاما-عظیم-ہے_slides.html" target="_blank">زاما عظیم ہے!</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ur0095"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0110</td>
+      <td><a href="/stories/ur/0110_ایک-چھوٹا-بیج-وانگاری-ماتھائی-کی-کہانی_slides.html" target="_blank">ایک چھوٹا بیج: وانگاری ماتھائی کی کہانی</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ur0110"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0112</td>
@@ -5085,6 +5103,12 @@
       <td><a href="/stories/ur/0156_بھوکھا-مگرمچرچھ_slides.html" target="_blank">بھوکھا مگرمچرچھ</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ur0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0158</td>
+      <td><a href="/stories/ur/0158_مرغی-اور-شاہین_slides.html" target="_blank">مرغی اور شاہین</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ur0158"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0210</td>
@@ -5113,12 +5137,6 @@
     <tr>
       <td>0327</td>
       <td><a href="/stories/ur/0327_جانوروں-کو-گننا_slides.html" target="_blank">جانوروں کو گننا</a></td>
-      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
-      <td><a name="ur0327"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-    </tr>
-    <tr>
-      <td>0327</td>
-      <td><a href="/stories/ur/0327_جانوروں-کی-گنتی_slides.html" target="_blank">جانوروں کی گنتی</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ur0327"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -5403,7 +5421,7 @@
       <td>0066</td>
       <td><a href="http://africanstorybook.org/stories/nozibele-and-three-hairs">Nozibele and the three hairs</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0066">ar</a>, <a href="#es0066">es</a>, <a href="#fa0066">fa</a>, <a href="#it0066">it</a>, <a href="#ko0066">ko</a>, <a href="#no0066">no</a>, <a href="#pa0066">pa</a>, <a href="#pl0066">pl</a>, <a href="#ru0066">ru</a>, <a href="#tl0066">tl</a>, <a href="#vi0066">vi</a>, <a href="#yue0066">yue</a>, <a href="#zh0066">zh</a></td>
+      <td><a href="#ar0066">ar</a>, <a href="#es0066">es</a>, <a href="#fa0066">fa</a>, <a href="#it0066">it</a>, <a href="#ko0066">ko</a>, <a href="#no0066">no</a>, <a href="#pa0066">pa</a>, <a href="#pl0066">pl</a>, <a href="#ru0066">ru</a>, <a href="#tl0066">tl</a>, <a href="#ur0066">ur</a>, <a href="#vi0066">vi</a>, <a href="#yue0066">yue</a>, <a href="#zh0066">zh</a></td>
     </tr>
     <tr>
       <td>0067</td>
@@ -5421,7 +5439,7 @@
       <td>0072</td>
       <td><a href="http://africanstorybook.org/stories/honeyguide%E2%80%99s-revenge">The Honeyguide’s revenge</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0072">ar</a>, <a href="#es0072">es</a>, <a href="#fa0072">fa</a>, <a href="#it0072">it</a>, <a href="#ko0072">ko</a>, <a href="#pa0072">pa</a>, <a href="#pl0072">pl</a>, <a href="#ru0072">ru</a>, <a href="#tl0072">tl</a>, <a href="#yue0072">yue</a>, <a href="#zh0072">zh</a></td>
+      <td><a href="#ar0072">ar</a>, <a href="#es0072">es</a>, <a href="#fa0072">fa</a>, <a href="#it0072">it</a>, <a href="#ko0072">ko</a>, <a href="#pa0072">pa</a>, <a href="#pl0072">pl</a>, <a href="#ru0072">ru</a>, <a href="#tl0072">tl</a>, <a href="#ur0072">ur</a>, <a href="#yue0072">yue</a>, <a href="#zh0072">zh</a></td>
     </tr>
     <tr>
       <td>0073</td>
@@ -5493,7 +5511,7 @@
       <td>0110</td>
       <td><a href="http://africanstorybook.org/stories/tiny-seed-story-wangari-maathai">A Tiny Seed: The Story of Wangari Maathai</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0110">ar</a>, <a href="#es0110">es</a>, <a href="#fa0110">fa</a>, <a href="#it0110">it</a>, <a href="#ko0110">ko</a>, <a href="#no0110">no</a>, <a href="#pa0110">pa</a>, <a href="#pl0110">pl</a>, <a href="#tl0110">tl</a>, <a href="#tr0110">tr</a>, <a href="#yue0110">yue</a>, <a href="#zh0110">zh</a></td>
+      <td><a href="#ar0110">ar</a>, <a href="#es0110">es</a>, <a href="#fa0110">fa</a>, <a href="#it0110">it</a>, <a href="#ko0110">ko</a>, <a href="#no0110">no</a>, <a href="#pa0110">pa</a>, <a href="#pl0110">pl</a>, <a href="#tl0110">tl</a>, <a href="#tr0110">tr</a>, <a href="#ur0110">ur</a>, <a href="#yue0110">yue</a>, <a href="#zh0110">zh</a></td>
     </tr>
     <tr>
       <td>0111</td>
@@ -5601,7 +5619,7 @@
       <td>0158</td>
       <td><a href="http://africanstorybook.org/stories/hen-and-eagle">Hen and Eagle</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0158">ar</a>, <a href="#bn0158">bn</a>, <a href="#es0158">es</a>, <a href="#fa0158">fa</a>, <a href="#it0158">it</a>, <a href="#ko0158">ko</a>, <a href="#no0158">no</a>, <a href="#pa0158">pa</a>, <a href="#pl0158">pl</a>, <a href="#tl0158">tl</a>, <a href="#yue0158">yue</a>, <a href="#zh0158">zh</a></td>
+      <td><a href="#ar0158">ar</a>, <a href="#bn0158">bn</a>, <a href="#es0158">es</a>, <a href="#fa0158">fa</a>, <a href="#it0158">it</a>, <a href="#ko0158">ko</a>, <a href="#no0158">no</a>, <a href="#pa0158">pa</a>, <a href="#pl0158">pl</a>, <a href="#tl0158">tl</a>, <a href="#ur0158">ur</a>, <a href="#yue0158">yue</a>, <a href="#zh0158">zh</a></td>
     </tr>
     <tr>
       <td>0172</td>
@@ -5835,7 +5853,7 @@
       <td>0327</td>
       <td><a href="http://africanstorybook.org/stories/counting-animals">Counting animals</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#aeb0327">aeb</a>, <a href="#ar0327">ar</a>, <a href="#de0327">de</a>, <a href="#es0327">es</a>, <a href="#fa0327">fa</a>, <a href="#it0327">it</a>, <a href="#ko0327">ko</a>, <a href="#no0327">no</a>, <a href="#pa0327">pa</a>, <a href="#pl0327">pl</a>, <a href="#tl0327">tl</a>, <a href="#ur0327">ur</a>, <a href="#ur0327">ur</a>, <a href="#vi0327">vi</a>, <a href="#yue0327">yue</a>, <a href="#zh0327">zh</a></td>
+      <td><a href="#aeb0327">aeb</a>, <a href="#ar0327">ar</a>, <a href="#de0327">de</a>, <a href="#es0327">es</a>, <a href="#fa0327">fa</a>, <a href="#it0327">it</a>, <a href="#ko0327">ko</a>, <a href="#no0327">no</a>, <a href="#pa0327">pa</a>, <a href="#pl0327">pl</a>, <a href="#tl0327">tl</a>, <a href="#ur0327">ur</a>, <a href="#vi0327">vi</a>, <a href="#yue0327">yue</a>, <a href="#zh0327">zh</a></td>
     </tr>
     <tr>
       <td>0331</td>
