--- a/stories/ur/0009_میری-بلی-کہاں-ہے؟_slides.html
+++ b/stories/ur/0009_میری-بلی-کہاں-ہے؟_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <h2 id="میری-بلی-کہاں-ہے-1">میری بلی کہاں ہے؟</h2>
-<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Bronwen Heath<br> <strong>Translation:</strong> Shahid Abrar-ul-Hassan<br> <strong>Language:</strong> Urdu<br>
+<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Bronwen Heath<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
