--- a/stories/ur/0066_نوزی-بیلے-اور-تین-بال_slides.html
+++ b/stories/ur/0066_نوزی-بیلے-اور-تین-بال_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Unglaubliche Daisy - Global African Storybook</title>
+  <title>نوزی بیلے اور تین بال - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="unglaubliche-daisy" class="slide level1">
-<h1>Unglaubliche Daisy</h1>
+<section id="نوزی-بیلے-اور-تین-بال" class="slide level1">
+<h1>نوزی بیلے اور تین بال</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/02.jpg" /></p>
-<p>Vor langer Zeit lebte auf einer kleinen Farm in der Nähe eines kleinen Dorfes</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/02.jpg" /></p>
+<p>کافی عرصہ پہلے تین لڑکیاں لکڑیاں اکھٹی کرنے باہر نکلیں ۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/03.jpg" /></p>
-<p>ein kleines Huhn mit Namen Daisy.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/03.jpg" /></p>
+<p>وہ ایک گرم دن تھا اس لیے وہ نیچے دریا میں تیرنے چلی گئیں ۔ وہ پانی میں کھلیں اور مل کر پانی اُڑایا ۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/04.jpg" /></p>
-<p>&quot;Wenn ich groß bin, möchte ich hoch, hoch in den Himmel fliegen&quot;, sagte Daisy.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/04.jpg" /></p>
+<p>اچانک، اُنہیں احساس ہو ا کہ کافی دیر ہو چکی ہے ۔ وہ واپس گاوں کی طرف بھاگیں ۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/05.jpg" /></p>
-<p>Aber die anderen Hühner lachten sie aus.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/05.jpg" /></p>
+<p>گھر کے قریب پہنچ کر نوزی بیلے نے اپنا ہاتھ گردن پر رکھا ۔وہ اپنا ہار کہیں بھول آئی ۔میرے ساتھ واپس چلو اُس نے اپنی دوستوں سے منت کی، لیکن اُس کی دوستوں نے دیر ہونے کی وجہ سے انکار کر دیا ۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/06.jpg" /></p>
-<p>&quot;Du bist so komisch,&quot; sagten sie. &quot;Wir werden nicht mehr mit dir spielen.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/06.jpg" /></p>
+<p>اس لیے نوزی بیلے اکیلی در یا پر چلی گئی ۔ اُسے اپنا ہار ملا اور وہ گھر کی طرف بھاگی۔لیکن وہ اندھیرے میں کھو گئی ۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/07.jpg" /></p>
-<p>&quot;Daisy, wir können alle mit den Flügeln flattern, aber für Hühner ist es sehr schwer zu fliegen&quot;, sagte ihre Mama.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/07.jpg" /></p>
+<p>دور فاصلے پر اُسے ایک جھونپڑی سے روشنی آتی دیکھائی دی ۔ وہ بھاگتی ہوئی اُس کے پاس پہنچی اور دروازے پر دستک دی ۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/08.jpg" /></p>
-<p>Daisy wollte nicht aufgeben. Jeden Tag übte sie alleine und flatterte mit ihren Flügeln. Flatter, flatter, flatter. Sie schlug mit den Flügeln, aber sie konnte nicht vom Boden abheben.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/08.jpg" /></p>
+<p>وہ حیرت زدہ تھی، کہ ایک کتے نے دروازہ کھولا اور پوچھا &quot;تمہیں کیا چاہیے؟&quot;میں کھو گئی ہو ں، مجھے سونے کے لیے جگہ چاہیے نوزی بیلے نے کہا ۔ اندر آجاو نہیں تو میں تمہیں کاٹ جاوں گا کتے نے کہا ۔ اس لیے نو زی بیلے اندر آگئی ۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/10.jpg" /></p>
-<p>Wenn sie übte, stellte sie sich vor, wie sie hoch in den Himmel flog und auf die Hühner unter sich herunterschaute. Sie stellte sich vor, sie würde an Spatzen und Schwalben vorbeifliegen. &quot;Toll!&quot; würden die Vögel sagen. &quot;Ein Huhn, das fliegen kann!&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/09.jpg" /></p>
+<p>پھر کتے نے کہا میرے لیے کھانا پکاو! لیکن میں نے اس سے پہلے کبھی کتے کے لیے کھانا نہیں بنایا اُس نے جو اب دیا ۔ پکاو، نہیں تو میں تمہیں کاٹ جاوں گا کتے نے کہا ۔ اس لیے نوزی بیلے نے اُس کے لیے کچھ کھانا پکایا ۔</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/12.jpg" /></p>
-<p>Darum ... flatter, flatter, flatter wollte sie weiter jeden Tag mit den Flügeln flattern.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
+<p>پھر کتے نے کہا، میرے لیے بستر لگاو! نوزی بیلے نے جو اب دیا میں نے کبھی کتے کے لیے بستر نہیں لگایا ۔ بستر لگاو، نہیں تو میں تمہیں کاٹ جاوں گا ۔ کتے نے کہا۔ اس لیے نوزی بیلے نے بستر لگایا ۔</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/13.jpg" /></p>
-<p>Sie würde vom Boden abheben und wieder herunterfallen.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/11.jpg" /></p>
+<p>ہر دن اُسے کھانا پکانا پڑتا اورکتے کے لیے صفائی ستھرائی کا خیال رکھنا پڑتا ۔ پھر ایک دن کتے نے کہا نوزی بیلے آج مجھے کچھ دوستوں سے ملنے جانا ہے ۔ گھر صاف کر دو۔ کھانا بنا دو اور میری چیزیں دھو دو ۔ جب تک میں واپس آوں۔</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/14.jpg" /></p>
-<p>&quot;Ich werde nie fliegen können!&quot; weinte Daisy ihre Mama an. &quot;Die anderen haben recht.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/12.jpg" /></p>
+<p>جلد از جلد کتے کے جانے پر نوزی بیلے نے اپنے سر سے تین بال نکالے ۔ ایک بال اُس نے بستر کے نیچے رکھا، ایک بال دروازے کے پیچھے اور ایک بال باڑ میں رکھا ۔ پھر وہ گھر کی طرف بھاگی جتنا تیز وہ بھاگ سکتی تھی ۔</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,8 +195,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/15.jpg" /></p>
-<p>&quot;Daisy, du bist anders als die anderen Hühner. Die möchten gar nicht fliegen, aber du willst es. Du schaffst das,&quot; sagte Mama.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
+<p>جب کتا واپس آیا، اُس نے نوزی بیلے کو تلاش کیا ۔ نوزی بیلے، تم کہاں ہو؟ وہ چلایا ۔ میں یہاں ہو ں بستر کے نیچے، پہلے بال نے کہا ۔ میں یہاں ہوں دروازے کے پیچھے دوسرے بال نے کہا ۔ میں یہاں ہوں باڑ میں، تیسرے بال نے کہا ۔</p>
 <center>
 <strong>12</strong>
 </center>
@@ -204,8 +204,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/16.jpg" /></p>
-<p>Am nächsten Tag kletterte Daisy oben auf den Hühnerstall und flatter, flatter, flatter, schlug sie mit den Flügeln. Sie flog in die Luft und flatterte mit den Flügeln ... und flatterte mit den Flügeln ... und flatterte mit den Flügeln ... und</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/14.jpg" /></p>
+<p>پھر کتے کو پتہ چل گیا کہ نوزی بیلے اُس کے ساتھ کھیل کھیل رہی ہے ۔ اس لیے وہ گاوں کی طرف بھاگا ۔ لیکن نو زی بیلے کے بھائی وہاں ہاتھوں میں بڑی لکڑیوں کے ساتھ انتظار کر رہے تھے۔ کتا واپس مڑا اور بھاگ گیا اور آج تک کبھی دکھائی نہیں دیا ۔</p>
 <center>
 <strong>13</strong>
 </center>
@@ -213,75 +213,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/18.jpg" /></p>
-<p>BUMMS</p>
-<center>
-<strong>14</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/19.jpg" /></p>
-<p>Die anderen Hühner lachten laut. &quot;Hahaha! Wir haben es dir gesagt. Hühner können nicht fliegen!&quot;</p>
-<center>
-<strong>15</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/20.jpg" /></p>
-<p>Aber am nächsten Tag kletterte Daisy noch höher bis ganz oben auf die Rundhütte. Flatter, flatter, flatter, schlug Daisy mit ihren Flügeln.</p>
-<center>
-<strong>16</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/21.jpg" /></p>
-<p>Sie flog in die Luft und flatterte mit den Flügeln ... und flatterte mit den Flügeln ... und flatterte mit den Flügeln ... und</p>
-<center>
-<strong>17</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/22.jpg" /></p>
-<p>Sie flog weiter! Der Wind unter ihren Flügeln wurde stärker und sie flog höher und höher! Die Spatzen und Schwalben sagten: &quot;Toll! Ein fliegendes Huhn!&quot;</p>
-<center>
-<strong>18</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/23.jpg" /></p>
-<p>Und die anderen Hühner wollten genauso werden wie sie.</p>
-<center>
-<strong>19</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/24.jpg" /></p>
-<p>Sie sagten, &quot;Oh Daisy, du bist toll!&quot;</p>
-<center>
-<strong>20</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="unglaubliche-daisy-1">Unglaubliche Daisy</h2>
-<strong>Text:</strong> Nozizwe Herero<br> <strong>Veranschaulichung:</strong> Siya Masuku<br> <strong>Übersetzung:</strong> chabauer<br> <strong>Sprache:</strong> Deutsch<br>
+<h2 id="نوزی-بیلے-اور-تین-بال-1">نوزی بیلے اور تین بال</h2>
+<strong>Text:</strong> Tessa Welch<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/amazing-daisy'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/nozibele-and-three-hairs'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
