--- a/stories/ur/0095_زاما-عظیم-ہے_slides.html
+++ b/stories/ur/0095_زاما-عظیم-ہے_slides.html
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <h2 id="زاما-عظیم-ہے-1">زاما عظیم ہے!</h2>
-<strong>Text:</strong> Michael Oguttu<br> <strong>Illustrations:</strong> Vusi Malindi<br> <strong>Translation:</strong> Shahid Abrar-ul-Hassan<br> <strong>Language:</strong> Urdu<br>
+<strong>Text:</strong> Michael Oguttu<br> <strong>Illustrations:</strong> Vusi Malindi<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
