--- a/stories/ur/0158_مرغی-اور-شاہین_slides.html
+++ b/stories/ur/0158_مرغی-اور-شاہین_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Unglaubliche Daisy - Global African Storybook</title>
+  <title>مرغی اور شاہین - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="unglaubliche-daisy" class="slide level1">
-<h1>Unglaubliche Daisy</h1>
+<section id="مرغی-اور-شاہین" class="slide level1">
+<h1>مرغی اور شاہین</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/02.jpg" /></p>
-<p>Vor langer Zeit lebte auf einer kleinen Farm in der Nähe eines kleinen Dorfes</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/02.jpg" /></p>
+<p>ایک دفعہ کا ذکر ہے، کہ مرغی اور شاہین دوست تھے۔ وہ باقی پرندوں کے ساتھ سکون سے رہتے ۔ اُن میں سے کوئی بھی اُڑ نہیں سکتا تھا۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/03.jpg" /></p>
-<p>ein kleines Huhn mit Namen Daisy.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/03.jpg" /></p>
+<p>ایک دن، زمین پر قحط پڑ گیا ۔ شاھین کو دور تک چل کر کھانا ڈھونڈنا پڑا۔ وہ تھکی ہاری واپس آئی۔ سفر کرنے کا کوئی آسان طریقہ ضرور ہونا چاہیے۔ شاھین نے کہا ۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/04.jpg" /></p>
-<p>&quot;Wenn ich groß bin, möchte ich hoch, hoch in den Himmel fliegen&quot;, sagte Daisy.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
+<p>رات کی اچھی نیند کے بعد، مرغی کے دماغ میں ایک زبردست خیال آیا۔ وہ اپنے پرندے دوستوں کے گِرے ہوئے پروں کو اکٹھا کرنے لگی۔ چلو انہیں اپنے پروں کے اوپر سی لیتی ہیں اُس نے کہا۔شاید تب سفر کرنا آسان ہوجائے۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/05.jpg" /></p>
-<p>Aber die anderen Hühner lachten sie aus.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/05.jpg" /></p>
+<p>گاوں میں صرف شاھین کے پاس سوئی مو جود تھی اس لیے اُس نے سب سے پہلے سینا شروع کیا۔ اُس نے اپنے لیے خوبصورت پروں کا جوڑا تیار کیا اور مرغی سے اُونچا اُڑی۔ مرغی نے اُس سے سوئی اُدھار لی لیکن وہ سیلائی کرتے ہوئے جلد تھک گئی۔اُس نے سوئی کو الماری پر رکھا اوراپنے بچوں کے لیے کھانا پکانے باورچی خانے چلی گئی۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/06.jpg" /></p>
-<p>&quot;Du bist so komisch,&quot; sagten sie. &quot;Wir werden nicht mehr mit dir spielen.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/06.jpg" /></p>
+<p>لیکن دوسرے پرندوں نے شاھین کو دور اُڑتے دیکھا۔ اُنہوں نے مرغی سے سوئی مانگی تاکہ وہ بھی اپنے لیے پر تیار کر سکیں ۔ جلد ہی پرندے سارے آسمان پر اُڑنے لگے۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/07.jpg" /></p>
-<p>&quot;Daisy, wir können alle mit den Flügeln flattern, aber für Hühner ist es sehr schwer zu fliegen&quot;, sagte ihre Mama.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/07.jpg" /></p>
+<p>جب آخری پرندے نے مانگی ہوئی سوئی واپس کی تو مرغی وہاں موجو د نہیں تھی۔ اس لیے بچوں نے سوئی اُتھائی اوراُس سے کھیلنا شروع کر دیا ۔ جب وہ کھیل سے تھک گئے تو اُنہوں نے سوئی ریت میں چھوڑ دی۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/08.jpg" /></p>
-<p>Daisy wollte nicht aufgeben. Jeden Tag übte sie alleine und flatterte mit ihren Flügeln. Flatter, flatter, flatter. Sie schlug mit den Flügeln, aber sie konnte nicht vom Boden abheben.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/08.jpg" /></p>
+<p>دوپہر کے بعد شاھین لوٹی۔ اُس نے سوئی کے لیے پوچھا تاکہ وہ پرمضبوطی سے جوڑ سکے جو کے سفر کے دوران ڈھیلے ہو گئے تھے۔مرغی نے الماری پر دیکھا ۔ اُس نے باورچی خانے میں دیکھا۔ اُس نے اردگرد دیکھا لیکن سوئی کہیں نہیں ملی۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/10.jpg" /></p>
-<p>Wenn sie übte, stellte sie sich vor, wie sie hoch in den Himmel flog und auf die Hühner unter sich herunterschaute. Sie stellte sich vor, sie würde an Spatzen und Schwalben vorbeifliegen. &quot;Toll!&quot; würden die Vögel sagen. &quot;Ein Huhn, das fliegen kann!&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/09.jpg" /></p>
+<p>مجھے ایک دن دے دو، مرغی نے شاھین کی منت کی پھر تم دوبارہ سے اپنے پروں کو جوڑ سکتی ہو اور کھانے کی تلاش میں اُڑ سکتی ہو۔ صرف ایک اور دن۔ شاھین نے کہا۔اگر تم سوئی دینے میں ناکام رہی تو تمہیں اپنے ایک چوزے کو مجھے دے کر قیمت چکانی ہوگی۔</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/12.jpg" /></p>
-<p>Darum ... flatter, flatter, flatter wollte sie weiter jeden Tag mit den Flügeln flattern.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/10.jpg" /></p>
+<p>جب اگلے دن شاھین آئی، اُس نے مرغی کو ریت میں پاوں مارتے دیکھا لیکن سوئی نہیں ملی۔ اس لیے شاھین بہت تیزی سے نیچے آئی اور ایک چوزے کو اُتھا لیا۔ وہ اُسے دور لے گئی۔ اُس کے بعد ہمیشہ جب کبھی شاھین آتی تو وہ مرغی کو ریت میں پاوں مارتے ہوئے پاتی۔</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/13.jpg" /></p>
-<p>Sie würde vom Boden abheben und wieder herunterfallen.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
+<p>جب بھی شاھین کے پروں کا سایہ زمین پر پڑتا مرغی اپنے بچوں کو خبر دار کرتی کہ زمین کے خشک اور خالی حصہ سے بھاگ جاو اور وہ جواب دیتے ہم بیوقوف نہیں ہیں ہم بھاگیں گے۔</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,102 +186,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/14.jpg" /></p>
-<p>&quot;Ich werde nie fliegen können!&quot; weinte Daisy ihre Mama an. &quot;Die anderen haben recht.&quot;</p>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/15.jpg" /></p>
-<p>&quot;Daisy, du bist anders als die anderen Hühner. Die möchten gar nicht fliegen, aber du willst es. Du schaffst das,&quot; sagte Mama.</p>
-<center>
-<strong>12</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/16.jpg" /></p>
-<p>Am nächsten Tag kletterte Daisy oben auf den Hühnerstall und flatter, flatter, flatter, schlug sie mit den Flügeln. Sie flog in die Luft und flatterte mit den Flügeln ... und flatterte mit den Flügeln ... und flatterte mit den Flügeln ... und</p>
-<center>
-<strong>13</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/18.jpg" /></p>
-<p>BUMMS</p>
-<center>
-<strong>14</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/19.jpg" /></p>
-<p>Die anderen Hühner lachten laut. &quot;Hahaha! Wir haben es dir gesagt. Hühner können nicht fliegen!&quot;</p>
-<center>
-<strong>15</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/20.jpg" /></p>
-<p>Aber am nächsten Tag kletterte Daisy noch höher bis ganz oben auf die Rundhütte. Flatter, flatter, flatter, schlug Daisy mit ihren Flügeln.</p>
-<center>
-<strong>16</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/21.jpg" /></p>
-<p>Sie flog in die Luft und flatterte mit den Flügeln ... und flatterte mit den Flügeln ... und flatterte mit den Flügeln ... und</p>
-<center>
-<strong>17</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/22.jpg" /></p>
-<p>Sie flog weiter! Der Wind unter ihren Flügeln wurde stärker und sie flog höher und höher! Die Spatzen und Schwalben sagten: &quot;Toll! Ein fliegendes Huhn!&quot;</p>
-<center>
-<strong>18</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/23.jpg" /></p>
-<p>Und die anderen Hühner wollten genauso werden wie sie.</p>
-<center>
-<strong>19</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/24.jpg" /></p>
-<p>Sie sagten, &quot;Oh Daisy, du bist toll!&quot;</p>
-<center>
-<strong>20</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="unglaubliche-daisy-1">Unglaubliche Daisy</h2>
-<strong>Text:</strong> Nozizwe Herero<br> <strong>Veranschaulichung:</strong> Siya Masuku<br> <strong>Übersetzung:</strong> chabauer<br> <strong>Sprache:</strong> Deutsch<br>
+<h2 id="مرغی-اور-شاہین-1">مرغی اور شاہین</h2>
+<strong>Text:</strong> Ann Nduku<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/amazing-daisy'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/hen-and-eagle'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
