--- a/stories/de/0200_unglaubliche-daisy.html
+++ b/stories/de/0200_unglaubliche-daisy.html
@@ -187,7 +187,7 @@ Nozizwe Herero<br>Deutsch</div><div class="pagebreak">
 <div class="pagenum">20</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Nozizwe Herero<br /><strong>Veranschaulichung:</strong> Siya Masuku<br /><strong>Übersetzung:</strong> Anna Westpfahl<br /><strong>Sprache:</strong> Deutsch</p>
+<p><strong>Text:</strong> Nozizwe Herero<br /><strong>Veranschaulichung:</strong> Siya Masuku<br /><strong>Übersetzung:</strong> chabauer<br /><strong>Sprache:</strong> Deutsch</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/amazing-daisy">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
