--- a/stories/ur/0001_ایک-بہت-لمبا-آدمی_slides.html
+++ b/stories/ur/0001_ایک-بہت-لمبا-آدمی_slides.html
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <h2 id="ایک-بہت-لمبا-ادمی-1">ایک بہت لمبا آدمی</h2>
-<strong>Text:</strong> Cornelius Gulere<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Shahid Abrar-ul-Hassan<br> <strong>Language:</strong> Urdu<br>
+<strong>Text:</strong> Cornelius Gulere<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
