--- a/stories/ur/0006_انانسی-اور-عقل.html
+++ b/stories/ur/0006_انانسی-اور-عقل.html
@@ -89,7 +89,7 @@ Ghanaian folktale<br>اردو</div><div class="pagebreak">
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Ghanaian folktale<br /><strong>Illustrations:</strong> Wiehan de Jager<br /><strong>Translation:</strong> Shahid Abrar-ul-Hassan<br /><strong>Language:</strong> Urdu</p>
+<p><strong>Text:</strong> Ghanaian folktale<br /><strong>Illustrations:</strong> Wiehan de Jager<br /><strong>Translation:</strong> Samrina Sana<br /><strong>Language:</strong> Urdu</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/anansi-and-wisdom">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
