--- a/stories/ur/0009_میری-بلی-کہاں-ہے؟.html
+++ b/stories/ur/0009_میری-بلی-کہاں-ہے؟.html
@@ -103,7 +103,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>اردو</div><div class="pa
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br /><strong>Illustrations:</strong> Bronwen Heath<br /><strong>Translation:</strong> Shahid Abrar-ul-Hassan<br /><strong>Language:</strong> Urdu</p>
+<p><strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br /><strong>Illustrations:</strong> Bronwen Heath<br /><strong>Translation:</strong> Samrina Sana<br /><strong>Language:</strong> Urdu</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/where-my-cat">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
