--- a/stories/ur/0072_ہنی-گائیڈ-کا-بدلہ_slides.html
+++ b/stories/ur/0072_ہنی-گائیڈ-کا-بدلہ_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Unglaubliche Daisy - Global African Storybook</title>
+  <title>ہنی گائیڈ کا بدلہ - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="unglaubliche-daisy" class="slide level1">
-<h1>Unglaubliche Daisy</h1>
+<section id="ہنی-گائیڈ-کا-بدلہ" class="slide level1">
+<h1>ہنی گائیڈ کا بدلہ</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/02.jpg" /></p>
-<p>Vor langer Zeit lebte auf einer kleinen Farm in der Nähe eines kleinen Dorfes</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/02.jpg" /></p>
+<p>یہ ایک ہنی گائیڈ نیج اور ایک لالچی آدمی گنگائل کی کہانی ہے ۔ ایک دن جب گنگائل شکار کے لیے باہر تھا اُس نے نیج کی پکار سُنی ۔ گنگائل کے منہ میں پانی بھر گیا جب اُس نے شہد کے بارے میں سوچا ۔ وہ رُک گیا اور اُس نے غور سے سُنا ۔ جب تک کہ اسے اپنے سر کے اوپر مو جو د ٹہنیوں پہ بیٹھا پرندہ دکھائی نہیں دیا ۔ چٹک ۔چٹک۔چٹک ۔ چھوٹا پرندہ چہچہایا جیسا کہ وہ اگلے اور اس سے اگلے درخت پر جا کر بیٹھا ۔ چٹک۔چٹک۔چٹک۔ اُس نے بلایا ۔ وقتاً فوقتآً وہ اس بات کو یقینی بنا رہا تھا کہ وہ گنگائل اُس کے پیچھے ہے ۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/03.jpg" /></p>
-<p>ein kleines Huhn mit Namen Daisy.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/03.jpg" /></p>
+<p>آدھے گھنٹے کے بعد، وہ ایک بڑے جنگلی درخت کے پاس پہنچے ۔ اُس نے پاگلوں کی طرح ٹہنیاں چھانی ۔ اور پھر وہ ایک ٹہنی پر آ کر رُک گیا جیسا کہ وہ گنگائل سے کہنا چاہتا ہو اب آو! یہ رہا! تمہیں اتنی دیر کیوں لگ رہی ہے ۔ گنگائل کو درخت کے نیچے کوئی مکھیاں دکھائی نہ دیں، لیکن اُس نے نیج پر بھروسہ کیا ۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/04.jpg" /></p>
-<p>&quot;Wenn ich groß bin, möchte ich hoch, hoch in den Himmel fliegen&quot;, sagte Daisy.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/04.jpg" /></p>
+<p>اس لیے گنگائل نے اپنا ہتھیار درخت کے نیچے رکھ دیا اور کچھ سوکھی لکڑیاں اکھٹی کر کے آگ جلائی ۔ جب آگ ٹھیک سے جل رہی تھی اُس نے ایک لمبی سوکھی لکڑی درمیان میں رکھ دی۔ یہ لکڑی جلنے پر بہت سا دھواں دینے کے لیے جانی جاتی ہے ۔ دوسری طرف سے لکڑی کا ٹھنڈا حصہ وہ دانتوں میں چبائے مزے لے رہا تھا ۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/05.jpg" /></p>
-<p>Aber die anderen Hühner lachten sie aus.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/05.jpg" /></p>
+<p>جلد ہی اُسےمصروف مکھیوں کی آواز آنا شروع ہوئی۔ وہ ایک سوراخ میں سے آ جا رہیں تھیں جو کہ اُن کا چھتہ تھا ۔جب گنگائل چھتے کے پاس پہنچا اُس نے لکڑی کا جلتا ہوا حصہ مکھیوں کے چھتے میں ڈال دیا۔ مکھیاں غصے سے بھنھبناتی ہوئیں چھتے سے باہر نکلیں۔ وہ اُڑ گئیں کیونکہ اُنہیں دھواں پسند نہیں۔ لیکن اس سے پہلے نہیں جب تک وہ گنگائل کو کچھ درد ناک ڈنگ نہ مار لیتیں ۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/06.jpg" /></p>
-<p>&quot;Du bist so komisch,&quot; sagten sie. &quot;Wir werden nicht mehr mit dir spielen.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/06.jpg" /></p>
+<p>جب مکھیاں باہر نکل گئیں، گنگائل نے اپنا ہاتھ چھتے میں ڈالا اورچھتے کے حصوں کو باہر نکالا جو کہ شہد سے بھرے ہوئے تھے اور چربی سے بھرے سفید گربوں کو بھی باہر نکالا ۔ اس نے شہد سے بھرے چھتے کو اپنے تھیلے میں رکھا اور کندھے پر پہن لیااور درخت سے نیچے اُترنا شروع کر دیا ۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/07.jpg" /></p>
-<p>&quot;Daisy, wir können alle mit den Flügeln flattern, aber für Hühner ist es sehr schwer zu fliegen&quot;, sagte ihre Mama.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/07.jpg" /></p>
+<p>نیج یہ سب بہت شوق سے دیکھ رہا تھا جو کچھ گنگائل کر رہا تھا ۔ وہ انتظار میں تھا کہ بطور ہنی گائیڈ شکریہ کے طور پر وہ اُس کو شہد دے گا ۔نیج ایک شاخ سے دوسری شاخ نزدیک سے نزدیک زمین پر اُس کے پاس جانے کی کو شش میں تھا ۔ آخر کار گنگائل درخت سے نیچے اُتر آیا ۔نیج اُس کے پاس پڑے ایک پتھر پر آکر روکا اور اپنے انعام کا انتظار کیا ۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/08.jpg" /></p>
-<p>Daisy wollte nicht aufgeben. Jeden Tag übte sie alleine und flatterte mit ihren Flügeln. Flatter, flatter, flatter. Sie schlug mit den Flügeln, aber sie konnte nicht vom Boden abheben.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/08.jpg" /></p>
+<p>لیکن گنگائل نے آگ بجھائی، اپنا ہتھیار اُٹھایا اور گھر کی طرف چلنا شروع کر دیا۔ پرندے کو نظر انداز کرتے ہوئے ۔ نیج نے غصے سے پکارا ۔ وِک ۔تور!وِک تور! گنگائل رکا پرندے کو گھورا اور زور سے ہنسا۔ تمہیں شہد چاہیے؟ واقعی میرے دوست؟ آہ لیکن میں نے خود سارا کام کیا اور ڈنگ کا درد سہا۔ تو میں یہ مزیدار شہد تمہارے ساتھ کیوں بانٹوں؟اور وہ چلا گیا ۔ نیج شدید غصے میں تھا اُسے اُس کے ساتھ ایسا نہیں کرنا چاہیے تھا ۔ لیکن وہ اپنا بدلہ لے گا۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/10.jpg" /></p>
-<p>Wenn sie übte, stellte sie sich vor, wie sie hoch in den Himmel flog und auf die Hühner unter sich herunterschaute. Sie stellte sich vor, sie würde an Spatzen und Schwalben vorbeifliegen. &quot;Toll!&quot; würden die Vögel sagen. &quot;Ein Huhn, das fliegen kann!&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/09.jpg" /></p>
+<p>ایک دن کئی ہفتوں کے بعد گنگائل نے نیج کی شہد کے لیے پکار سُنی۔ اُسے مزیدار شہد یا د تھا، اور اُس نے تیزی سے پرندے کا پیچھا کیا۔ نیج کو جنگل کے کنارے پر لا کر وہ رک گیا جہاں کانٹوں کا ایک جھاڑ مو جو د تھا۔ آہ ۔ گنگائل نے سوچا کہ شہد کا چھتا اسی درخت میں ہو گا۔ اُس نے جلدی سے آگ جلائی اوردانتوں میں جلتی ہوئی لکڑی کو دبائے درخت پر چڑھنے لگا ۔ نیج بیٹھا یہ سب دیکھ رہا تھا۔</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/12.jpg" /></p>
-<p>Darum ... flatter, flatter, flatter wollte sie weiter jeden Tag mit den Flügeln flattern.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/10.jpg" /></p>
+<p>درخت چڑھتے ہوئے گنگائل نے غور کیا کہ اُسے مکھیوں کی بھنھنانے کی آواز کیوں نہیں آ رہی۔ شاید چھتا درخت کی بہت گہرائی میں تھا۔ اُس نے سوچا۔ لیکن چھتے کے بجائے وہ ایک چیتی کے چہرے کو گھور رہا تھا۔ چیتی اپنی نیند کے اتنے خراب ہونے پر بہت غصہ تھی ۔ اُس نے اپنی آنکھوں کو چھوٹا کرتے ہوئے منہ کھولا تا کہ وہ اپنے بڑے اور تیز دانت دکھا سکے۔</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/13.jpg" /></p>
-<p>Sie würde vom Boden abheben und wieder herunterfallen.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/11.jpg" /></p>
+<p>اس سے پہلے کہ چیتی اس پر حملہ کرتی۔ گنگائل درخت سے نیچے اُتر آیا ۔ جلد بازی میں اُس نے ایک ٹہنی چھوڑی جس وجہ سے وہ سیدھا زمین پر آگرا اور اُس کا پاوں مڑ گیا ۔ وہ تیزی سے فرار ہوا ۔ خوشقسمتی سے چیتی نیند میں ہونے کی وجہ سے اُس کا پیچھا نہ کر پائی۔ نیج، ہنی گائیڈ نے اپنا بدلہ لے لیا ۔ اور گنگائل نے سبق سیکھ لیا۔</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/14.jpg" /></p>
-<p>&quot;Ich werde nie fliegen können!&quot; weinte Daisy ihre Mama an. &quot;Die anderen haben recht.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/12.jpg" /></p>
+<p>اور جب گنگائل کے بچوں نے نیج کی کہانی سُنی اُن کے دل میں چھوٹے پرندے کے لیے عزت پیدا ہوئی۔ جب کبھی وہ شہد اُتارتے وہ اس بات کو یقینی بناتے کہ چھتے کا سب سے بڑا حصہ وہ ہنی گائیڈ کے لیے چھوڑ دیں گے ۔</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,93 +195,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/15.jpg" /></p>
-<p>&quot;Daisy, du bist anders als die anderen Hühner. Die möchten gar nicht fliegen, aber du willst es. Du schaffst das,&quot; sagte Mama.</p>
-<center>
-<strong>12</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/16.jpg" /></p>
-<p>Am nächsten Tag kletterte Daisy oben auf den Hühnerstall und flatter, flatter, flatter, schlug sie mit den Flügeln. Sie flog in die Luft und flatterte mit den Flügeln ... und flatterte mit den Flügeln ... und flatterte mit den Flügeln ... und</p>
-<center>
-<strong>13</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/18.jpg" /></p>
-<p>BUMMS</p>
-<center>
-<strong>14</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/19.jpg" /></p>
-<p>Die anderen Hühner lachten laut. &quot;Hahaha! Wir haben es dir gesagt. Hühner können nicht fliegen!&quot;</p>
-<center>
-<strong>15</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/20.jpg" /></p>
-<p>Aber am nächsten Tag kletterte Daisy noch höher bis ganz oben auf die Rundhütte. Flatter, flatter, flatter, schlug Daisy mit ihren Flügeln.</p>
-<center>
-<strong>16</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/21.jpg" /></p>
-<p>Sie flog in die Luft und flatterte mit den Flügeln ... und flatterte mit den Flügeln ... und flatterte mit den Flügeln ... und</p>
-<center>
-<strong>17</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/22.jpg" /></p>
-<p>Sie flog weiter! Der Wind unter ihren Flügeln wurde stärker und sie flog höher und höher! Die Spatzen und Schwalben sagten: &quot;Toll! Ein fliegendes Huhn!&quot;</p>
-<center>
-<strong>18</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/23.jpg" /></p>
-<p>Und die anderen Hühner wollten genauso werden wie sie.</p>
-<center>
-<strong>19</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/24.jpg" /></p>
-<p>Sie sagten, &quot;Oh Daisy, du bist toll!&quot;</p>
-<center>
-<strong>20</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="unglaubliche-daisy-1">Unglaubliche Daisy</h2>
-<strong>Text:</strong> Nozizwe Herero<br> <strong>Veranschaulichung:</strong> Siya Masuku<br> <strong>Übersetzung:</strong> chabauer<br> <strong>Sprache:</strong> Deutsch<br>
+<h2 id="ہنی-گائیڈ-کا-بدلہ-1">ہنی گائیڈ کا بدلہ</h2>
+<strong>Text:</strong> Zulu folktale<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/amazing-daisy'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/honeyguide%E2%80%99s-revenge'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
