--- a/stories/ur/0089_خلائی-پودوں-سے-بات-کرتی-ہے_slides.html
+++ b/stories/ur/0089_خلائی-پودوں-سے-بات-کرتی-ہے_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <h2 id="خلائی-پودوں-سے-بات-کرتی-ہے-1">خلائی پودوں سے بات کرتی ہے</h2>
-<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Jesse Pietersen<br> <strong>Translation:</strong> Shahid Abrar-ul-Hassan<br> <strong>Language:</strong> Urdu<br>
+<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Jesse Pietersen<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
