--- a/stories/ur/0110_ایک-چھوٹا-بیج-وانگاری-ماتھائی-کی-کہانی_slides.html
+++ b/stories/ur/0110_ایک-چھوٹا-بیج-وانگاری-ماتھائی-کی-کہانی_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Unglaubliche Daisy - Global African Storybook</title>
+  <title>ایک چھوٹا بیج: وانگاری ماتھائی کی کہانی - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="unglaubliche-daisy" class="slide level1">
-<h1>Unglaubliche Daisy</h1>
+<section id="ایک-چھوٹا-بیج-وانگاری-ماتھائی-کی-کہانی" class="slide level1">
+<h1>ایک چھوٹا بیج: وانگاری ماتھائی کی کہانی</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/02.jpg" /></p>
-<p>Vor langer Zeit lebte auf einer kleinen Farm in der Nähe eines kleinen Dorfes</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/02.jpg" /></p>
+<p>مشرق افریقہ میں کینیا کے پہاڑوں کے ساحل پر ایک گاؤں میں ایک چھوٹی لڑکی اپنی ماں کے ساتھ کھیتوں میں کام کر تی تھی۔ اُس کا نام وانگاری تھا</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/03.jpg" /></p>
-<p>ein kleines Huhn mit Namen Daisy.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/03.jpg" /></p>
+<p>ونگاری کو باہر رہنا پسند تھا۔ اپنے گھر کے باغیچے میں اُس نے چاقو سے مٹی کو کھودا ۔اُس نے چھوٹے بیجوں کو گرم زمین میں دبایا ۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/04.jpg" /></p>
-<p>&quot;Wenn ich groß bin, möchte ich hoch, hoch in den Himmel fliegen&quot;, sagte Daisy.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/04.jpg" /></p>
+<p>سورج غروب ہونے کے فوراً بعد کا وقت اُس کا پسندیدہ وقت تھا۔ جب پودے دیکھنے کے لیے کافی اندھیرا ہو گیا تو ونگاری کو معلوم تھا کہ اب اُسے گھر جانا ہے ۔ وہ کھیتوں کے تنگ راستوں اور دریا کو پار کرتی ہوئی نکلی۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/05.jpg" /></p>
-<p>Aber die anderen Hühner lachten sie aus.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/05.jpg" /></p>
+<p>ونگاری ایک ہوشیار بچی تھی اور سکول جانے کے لیے بے تاب تھی ۔ لیکن اُس کی امی اور ابواُسے گھر پر رکھنا چاہتے تھے، تاکہ وہ اُن کی مدد کر سکے۔ جب وہ سات سال کی ہوئی اُس کے بڑے بھائی نے امی ابو کو اس کے سکول جانے کے لیے اُکسایا ۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/06.jpg" /></p>
-<p>&quot;Du bist so komisch,&quot; sagten sie. &quot;Wir werden nicht mehr mit dir spielen.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/06.jpg" /></p>
+<p>اُسے سیکھنا پسند تھا ۔ ونگاری ہر کتاب کے ساتھ زیا دہ سے زیا دہ سیکھتی ۔ اُس کی سکول کی شاندار کار کر دگی کی بنا پر اُسے امریکی ریاست میں پڑھنے کی دعوت ملی۔ ونگاری بہت خوش تھی۔ وہ دنیا کے بارے میں اور جاننا چاہتی تھی۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/07.jpg" /></p>
-<p>&quot;Daisy, wir können alle mit den Flügeln flattern, aber für Hühner ist es sehr schwer zu fliegen&quot;, sagte ihre Mama.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/07.jpg" /></p>
+<p>امریکی یونیورسٹی میں ونگاری نے بہت سی نئی چیزیں سیکھیں۔ اُس نے پودوں کے بارے میں پڑھا کہ وہ کیسے اُگتے ہیں۔ اور اُس نے یا د کیا کہ وہ کیسے بڑی ہوئی: اپنے بھائی کے ساتھ کھیل کھیلتے ہوئے کینیا کے جنگلوں کے خوبصورت درختوں کی چھاوں میں ۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/08.jpg" /></p>
-<p>Daisy wollte nicht aufgeben. Jeden Tag übte sie alleine und flatterte mit ihren Flügeln. Flatter, flatter, flatter. Sie schlug mit den Flügeln, aber sie konnte nicht vom Boden abheben.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/08.jpg" /></p>
+<p>زیا دہ سیکھنے پر، اُس کا یہ احساس بڑھتا چلا گیا کہ وہ کینیا کے لوگوں سے پیار کرتی تھی ۔ وہ اُنہیں خوش اور آزاد دیکھنا چاہتی تھی۔زیا دہ سیکھنے پر اُسے اپنے افریقی گھر کی اور یا د آتی۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/10.jpg" /></p>
-<p>Wenn sie übte, stellte sie sich vor, wie sie hoch in den Himmel flog und auf die Hühner unter sich herunterschaute. Sie stellte sich vor, sie würde an Spatzen und Schwalben vorbeifliegen. &quot;Toll!&quot; würden die Vögel sagen. &quot;Ein Huhn, das fliegen kann!&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/09.jpg" /></p>
+<p>تعلیم مکمل ہونے پر وہ کینیا لوٹی۔ لیکن اُس کا ملک بدل چکا تھا ۔ کھیت زمین پر زیا دہ پھیلے ہوئے تھے ۔ عورتوں کے پاس جلانے کے لیے لکڑی نہ تھی جس پر وہ کھانا بنا سکتیں ۔ لوگ غریب تھے اور بچے بھوکھے تھے۔</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/12.jpg" /></p>
-<p>Darum ... flatter, flatter, flatter wollte sie weiter jeden Tag mit den Flügeln flattern.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/10.jpg" /></p>
+<p>ونگاری کو معلوم تھا کہ اُسے کیا کرنا ہے ۔ اُس نے عورتوں کو بیج سے درخت اُگانا سکھائے ۔ عورتوں نے درخت بیچے اور اپنے گھروں کی دیکھ بھال کی۔عورتیں بہت خوش تھیں ۔ ونگاری نے اُنہیں مضبوط بننے میں اُن کی مدد کی ۔</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/13.jpg" /></p>
-<p>Sie würde vom Boden abheben und wieder herunterfallen.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/11.jpg" /></p>
+<p>جیسے جیسے وقت گزرتا گیا ۔ نئے درختوں نے جنگل کی صورت اختیار کر لی اور دریا دوبارہ سے بہنے لگے۔ ونگاری کی پیغام افریقہ میں پھیلنے لگا۔ آج، ونگاری کے بیجوں سے لاکھوں درخست اُگ چکے ہیں۔</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/14.jpg" /></p>
-<p>&quot;Ich werde nie fliegen können!&quot; weinte Daisy ihre Mama an. &quot;Die anderen haben recht.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/12.jpg" /></p>
+<p>ونگاری نے سخت محنت کی۔ دُنیا میں تمام لو گوں نے اُس کے کام پر غور کیا اور اُسے ایک مشہور تحفہ دیا۔ اسے نوبل امن کا تحفہ کہا جاتا ہے۔ اور یہ تحفہ حاصل کرنے والی وہ پہلی افریقی خاتون تھیں۔</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,8 +195,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/15.jpg" /></p>
-<p>&quot;Daisy, du bist anders als die anderen Hühner. Die möchten gar nicht fliegen, aber du willst es. Du schaffst das,&quot; sagte Mama.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/13.jpg" /></p>
+<p>ونگاری 2011میں وفات پا گئی ۔ لیکن جب بھی ہم خوبصورت درخت دیکھتے ہیں ہم اُسے یا د کرسکتے ہیں۔</p>
 <center>
 <strong>12</strong>
 </center>
@@ -204,84 +204,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/16.jpg" /></p>
-<p>Am nächsten Tag kletterte Daisy oben auf den Hühnerstall und flatter, flatter, flatter, schlug sie mit den Flügeln. Sie flog in die Luft und flatterte mit den Flügeln ... und flatterte mit den Flügeln ... und flatterte mit den Flügeln ... und</p>
-<center>
-<strong>13</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/18.jpg" /></p>
-<p>BUMMS</p>
-<center>
-<strong>14</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/19.jpg" /></p>
-<p>Die anderen Hühner lachten laut. &quot;Hahaha! Wir haben es dir gesagt. Hühner können nicht fliegen!&quot;</p>
-<center>
-<strong>15</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/20.jpg" /></p>
-<p>Aber am nächsten Tag kletterte Daisy noch höher bis ganz oben auf die Rundhütte. Flatter, flatter, flatter, schlug Daisy mit ihren Flügeln.</p>
-<center>
-<strong>16</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/21.jpg" /></p>
-<p>Sie flog in die Luft und flatterte mit den Flügeln ... und flatterte mit den Flügeln ... und flatterte mit den Flügeln ... und</p>
-<center>
-<strong>17</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/22.jpg" /></p>
-<p>Sie flog weiter! Der Wind unter ihren Flügeln wurde stärker und sie flog höher und höher! Die Spatzen und Schwalben sagten: &quot;Toll! Ein fliegendes Huhn!&quot;</p>
-<center>
-<strong>18</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/23.jpg" /></p>
-<p>Und die anderen Hühner wollten genauso werden wie sie.</p>
-<center>
-<strong>19</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/24.jpg" /></p>
-<p>Sie sagten, &quot;Oh Daisy, du bist toll!&quot;</p>
-<center>
-<strong>20</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="unglaubliche-daisy-1">Unglaubliche Daisy</h2>
-<strong>Text:</strong> Nozizwe Herero<br> <strong>Veranschaulichung:</strong> Siya Masuku<br> <strong>Übersetzung:</strong> chabauer<br> <strong>Sprache:</strong> Deutsch<br>
+<h2 id="ایک-چھوٹا-بیج-وانگاری-ماتھائی-کی-کہانی-1">ایک چھوٹا بیج: وانگاری ماتھائی کی کہانی</h2>
+<strong>Text:</strong> Nicola Rijsdijk<br> <strong>Illustrations:</strong> Maya Marshak<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/amazing-daisy'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/tiny-seed-story-wangari-maathai'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
