--- a/stories/ur/0129_سست-چھوٹا-بھائی_slides.html
+++ b/stories/ur/0129_سست-چھوٹا-بھائی_slides.html
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <h2 id="سست-چھوٹا-بھائی-1">سست چھوٹا بھائی</h2>
-<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Mlungisi Dlamini<br> <strong>Translation:</strong> Shahid Abrar-ul-Hassan<br> <strong>Language:</strong> Urdu<br>
+<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Mlungisi Dlamini<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
