--- a/stories/ur/0156_بھوکھا-مگرمچرچھ_slides.html
+++ b/stories/ur/0156_بھوکھا-مگرمچرچھ_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <h2 id="بھوکھا-مگرمچرچھ-1">بھوکھا مگرمچرچھ</h2>
-<strong>Text:</strong> Christian G.<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Shahid Abrar-ul-Hassan<br> <strong>Language:</strong> Urdu<br>
+<strong>Text:</strong> Christian G.<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
