--- a/stories/ur/0210_ٹینگی-اور-گائیں_slides.html
+++ b/stories/ur/0210_ٹینگی-اور-گائیں_slides.html
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <h2 id="ٹینگی-اور-گائیں-1">ٹینگی اور گائیں</h2>
-<strong>Text:</strong> Ingrid Schechter<br> <strong>Illustrations:</strong> Ingrid Schechter<br> <strong>Translation:</strong> Shahid Abrar-ul-Hassan<br> <strong>Language:</strong> Urdu<br>
+<strong>Text:</strong> Ingrid Schechter<br> <strong>Illustrations:</strong> Ingrid Schechter<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
