--- a/stories/ur/0271_دو_slides.html
+++ b/stories/ur/0271_دو_slides.html
@@ -182,7 +182,7 @@
 <section class="slide level1">
 
 <h2 id="دو-1">دو</h2>
-<strong>Text:</strong> Carole Bloch<br> <strong>Illustrations:</strong> Richard MacIntosh<br> <strong>Translation:</strong> Shahid Abrar-ul-Hassan<br> <strong>Language:</strong> Urdu<br>
+<strong>Text:</strong> Carole Bloch<br> <strong>Illustrations:</strong> Richard MacIntosh<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
