--- a/stories/ur/0342_سزا_slides.html
+++ b/stories/ur/0342_سزا_slides.html
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <h2 id="سزا-1">سزا</h2>
-<strong>Text:</strong> Adelheid Marie Bwire<br> <strong>Illustrations:</strong> Melany Pietersen<br> <strong>Translation:</strong> Shahid Abrar-ul-Hassan<br> <strong>Language:</strong> Urdu<br>
+<strong>Text:</strong> Adelheid Marie Bwire<br> <strong>Illustrations:</strong> Melany Pietersen<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
